--- a/config/database.yml
+++ b/config/database.yml
@@ -58,10 +58,10 @@ test:
 
 production:
   adapter: postgresql
-  host: ec2-54-197-250-52.compute-1.amazonaws.com
+  host: ec2-23-21-101-129.compute-1.amazonaws.com
   port: 5432
   encoding: unicode
-  database: d5jofpvrdp6fk5
+  database: d640mbgt0jldah
   pool: 5
-  username: ktkzsdyylqvlzc
-  password: OKTx_9b_wzOsIOZECNpYINzgRq
+  username: pcxhymrtwuytzg
+  password: V1fRtF9LI9f17-Uc_9jXJ85LS5
