removing sensitve stuff

--- a/config/database.yml
+++ b/config/database.yml
@@ -58,10 +58,10 @@ test:
 
 production:
   adapter: postgresql
-  host: ec2-54-225-243-113.compute-1.amazonaws.com
+  host: <%= ENV['ZK_DBHOST'] %>
   port: 5432
   encoding: unicode
-  database: db2o70r4o5fapl
+  database: <%= ENV['ZK_DB'] %>
   pool: 5
-  username: jjwjosutgythix
-  password: ZUxZ5T8jFSEtMuGBVaW4SjdlaX
+  username: <%= ENV['ZK_DBUSER'] %>
+  password: <%= ENV['ZK_DBPASS'] %>
